--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Tellraw Generator for Minecraft</title>
+	<title>Tellraw Generator for Arti</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 
@@ -14,9 +14,6 @@
 
 	<script defer src='build/bundle.js'></script>
 
-	<!-- Cloudflare Web Analytics -->
-	<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "3206dd7a7c514666809c79847aa39be2", "spa": true}'></script>
-	<!-- End Cloudflare Web Analytics -->
 </head>
 
 <body>
